# laconiq

./: .gitignore  LICENSE  README.md  pyproject.toml
laconiq/: __init__.py  generators.py  maker.py
tests/: schema.py  test_generate_one_instance.py  test_make.py
